@@ -18,7 +18,9 @@ import org.api.admin.model.req.upload.ArtistInfoReq;
 import org.api.admin.model.req.upload.AudioInfoReq;
 import org.core.config.PluginType;
 import org.core.mybatis.pojo.MusicDetails;
+import org.core.mybatis.pojo.TbOriginPojo;
 import org.jetbrains.annotations.NotNull;
+import org.junit.jupiter.api.Assertions;
 import org.plugin.common.CommonPlugin;
 import org.plugin.converter.PluginLabelValue;
 
@@ -121,7 +123,8 @@ class SyncOneMusicPlugin implements CommonPlugin {
                                                                     stringObjectMap -> stringObjectMap));
         List<Map<String, Object>> songDetail = getSongDetail(musicIds, cookie);
         for (Map<String, Object> song : songDetail) {
-            saveMusicInfo(musicUrl, song, cookie, Long.valueOf(userId));
+            MusicDetails musicDetails = saveMusicInfo(musicUrl, song, cookie, Long.valueOf(userId));
+            Assertions.assertNotNull(musicDetails);
         }
     }
     
@@ -181,10 +184,10 @@ class SyncOneMusicPlugin implements CommonPlugin {
             JSONArray transNames1 = MapUtil.get(artist, "transNames", JSONArray.class, new JSONArray());
             JSONArray transNames2 = MapUtil.get(artist, "alias", JSONArray.class, new JSONArray());
             List<String> alias = new ArrayList<>();
-            alias.addAll(transNames1.stream().map(String::valueOf).collect(Collectors.toList()));
-            alias.addAll(transNames2.stream().map(String::valueOf).collect(Collectors.toList()));
+            alias.addAll(transNames1.stream().map(String::valueOf).toList());
+            alias.addAll(transNames2.stream().map(String::valueOf).toList());
             artistPojo.setAliasName(CollUtil.join(alias, ","));
-        
+    
             // 歌手封面
             artistPojo.setPicUrl(MapUtil.getStr(artist, "avatar"));
             // 歌手描述
@@ -215,7 +218,11 @@ class SyncOneMusicPlugin implements CommonPlugin {
         // 逐字歌词
         dto.setKLyric(MapUtil.getStr(lyricMap, "klyric"));
         dto.setArtists(singer);
-        dto.setOrigin("163Music");
+        TbOriginPojo origin = new TbOriginPojo();
+        origin.setMusicId(musicId);
+        origin.setOriginUrl("https://music.163.com/#/song?id=" + musicId);
+        origin.setOrigin("163Music");
+        dto.setOrigin(origin);
         // 获取歌曲md5值
         Map<String, Object> musicUrlMap = songUrlMap.get(musicId);
         String url = MapUtil.getStr(musicUrlMap, "url");
